--- a/t/404.html
+++ b/t/404.html
@@ -7,8 +7,7 @@
 
     * {
         font-family: 'Recursive', sans-serif;
-        background-color: black;
-        color: white;
     }
 </style>
-<h1>{{ uname }}</h1>
+<h1>404</h1>
+<h2>We couldn't find this user.</h2>
